# Course3

./: .gitignore  README.md  pyproject.toml
src/: .gitignore  main.py  operations_data.py  utils.py
tests/: test_utils.py
